# music-to-midi

./: .gitignore  AGENTS.md  LICENSE  MusicToMidi.spec  README.md  THIRD_PARTY_NOTICES.md  _tmp_rank_models.py  build_portable.ps1  colab_notebook.ipynb  download_accompaniment_model.py  download_aria_amt_model.py  download_bytedance_piano_model.py  download_fluidsynth_runtime.py  download_miros_model.py  download_multistem_model.py  download_muscriptor_model.py  download_sota_models.py  download_transkun_v2_aug_model.py  download_vocal_harmony_model.py  download_vocal_model.py  install.bat  install.ps1  install.sh  install_yourmt3_code.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.ps1  run.sh
.github/workflows/: build.yml  release.yml  sync_to_hf.yml
YourMT3/: .gitattributes  .gitignore  README.md  app.py  html_helper.py  requirements.txt
docs/: README.md  README_zh.md  muscriptor-model.md
space/: README.md  app.py  requirements.txt
src/: __init__.py  main.py
src/core/: __init__.py  aria_amt_transcriber.py  beat_detector.py  bytedance_piano_transcriber.py  instrument_classifier.py  lyrics_recognizer.py  manual_midi.py  midi_generator.py  miros_stream_worker.py  miros_transcriber.py  multi_stem_separator.py  muscriptor_midi.py  muscriptor_result_assets.py  muscriptor_transcriber.py  piano_transcriber.py  pipeline.py  separation_service.py  separator.py  transcriber.py  transcription_stream.py  transkun_transcriber.py  transkun_v2_aug_transcriber.py  vocal_harmony_separator.py  vocal_separator.py  vocal_transcriber.py  yourmt3_transcriber.py
src/gui/: __init__.py  main_window.py  theme.py
src/i18n/: __init__.py  en_US.json  translator.py  zh_CN.json
src/models/: __init__.py  data_models.py  gm_instruments.py  muscriptor_instruments.py
src/utils/: artifact_identity.py  audio_separator_compat.py  audio_utils.py  fluidsynth_runtime.py  gpu_utils.py  logger.py  midi_output.py  muscriptor_downloader.py  muscriptor_soundfont_downloader.py  panns_downloader.py  runtime_paths.py  track_filter.py  velocity_estimator.py  warnings_filter.py  yourmt3_downloader.py  yourmt3_source_identity.py
tests/: __init__.py  test_aria_amt_model_downloader.py  test_aria_amt_transcriber.py  test_atomic_split_midi_publication.py  test_audio_export_worker.py  test_audio_separator_compat.py  test_audio_separator_cpu_fallback.py  test_audio_timeline_scroll_contract.py  test_audio_track_mixer.py  test_audio_waveform.py  test_backend_selector_ui.py  test_bytedance_piano_model_downloader.py  test_bytedance_piano_transcriber.py  test_cancellation_lifecycle.py  test_ci_workflow_contract.py  test_colab_notebook_dependencies.py  test_config_backend_semantics.py  test_cuda_compatibility.py  test_deployment_runtime_contract.py  test_dialog_theme.py  test_download_aria_amt_model.py  test_download_multistem_model.py  test_download_vocal_harmony_model.py  test_download_vocal_model.py  test_i18n_integration.py  test_inference_precision.py  test_main_self_test.py  test_main_startup_contract.py  test_manual_midi_route_menu_contract.py  test_midi_output_duration.py  test_midi_tempo_alignment.py  test_midi_track_mode.py  test_miros_downloader.py  test_miros_transcriber.py  test_multi_stem_separator_strict_outputs.py  test_multistem_model_downloader.py  test_muscriptor_documentation.py  test_muscriptor_integration.py  test_no_hidden_fallbacks.py  test_official_midi_routes.py  (+36 more)
tools/: alignment_smoke_runner.py  full_chain_matrix_runner.py  generate_third_party_sbom.py  repair_torch_openmp.py  validate_portable_model_assets.py
(+20 files in other folders)
