[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-to-midi"
version = "1.0.11"
description = "Convert audio to MIDI with AI multi-instrument transcription"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mason369"}
]
keywords = ["midi", "audio", "music", "transcription", "ai", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[project.urls]
Homepage = "https://github.com/mason369/music-to-midi"
Repository = "https://github.com/mason369/music-to-midi"
Issues = "https://github.com/mason369/music-to-midi/issues"

[project.scripts]
music-to-midi = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
