[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-to-midi"
version = "1.0.18"
description = "AI audio-to-MIDI converter with multi-instrument, stem, vocal, and piano transcription workflows"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "mason369"}
]
keywords = [
    "audio-to-midi",
    "midi",
    "music-transcription",
    "automatic-music-transcription",
    "ai-music",
    "stem-separation",
    "piano-transcription",
    "vocal-to-midi",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[project.urls]
Homepage = "https://github.com/mason369/music-to-midi"
Repository = "https://github.com/mason369/music-to-midi"
Issues = "https://github.com/mason369/music-to-midi/issues"

# Intentionally no console-script entry.  The supported install.ps1/install.sh
# launchers select and validate the exact CUDA runtime, ONNX Runtime provider,
# model assets, and non-PyPI backends that a plain `pip install` cannot provide.

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
